[package]
name = "processmaster"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.95"
axum = "0.7.9"
axum-server = { version = "0.7.0", features = ["tls-rustls"] }
askama = "0.12.1"
base64 = "0.22.1"
bcrypt = "0.15.1"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
cron = "0.13.0"
libc = "0.2.169"
log = "0.4.25"
log4rs = { version = "1.3.0", features = ["yaml_format", "gzip", "background_rotation"] }
nix = { version = "0.29.0", features = ["signal", "user", "process", "fs"] }
rand = "0.8.5"
rcgen = { version = "0.13.2", features = ["crypto", "pem"] }
rustls = "0.23.21"
rustls-pemfile = "2.2.0"
signal-hook = "0.3.17"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
thiserror = "2.0.11"
time = { version = "0.3.37", features = ["std"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "net", "signal", "time", "io-util", "fs", "sync"] }
tower = "0.5.1"
users = "0.11.0"
walkdir = "2.5.0"

[[bin]]
name = "processmaster"
path = "src/bin/processmaster.rs"

[[bin]]
name = "pmctl"
path = "src/bin/pmctl.rs"
